[FE] 조혜림/251127/api연동 및 핀치줌 적용